- Turn of /sdl in Release builds (overridden by /GS- anyway) - Add property sheet for Debug builds (config-debug.props) and turn on /sdl

--- a/vs/vs12/jsdebug/config-release.props
+++ b/vs/vs12/jsdebug/config-release.props
@@ -19,6 +19,8 @@
       <ExceptionHandling>false</ExceptionHandling>
       <FunctionLevelLinking>true</FunctionLevelLinking>
       <PreprocessorDefinitions>NDEBUG;%(PreprocessorDefinitions)</PreprocessorDefinitions>
+      <BufferSecurityCheck>false</BufferSecurityCheck>
+      <WarningLevel>Level4</WarningLevel>
     </ClCompile>
   </ItemDefinitionGroup>
   <ItemGroup />
