- Rewrite locals.c quite significantly (again!) to stop using annotation method, which is overkill, and just look at the method name of the SuCallable to determine what is a valid Suneido stack frame and what isn't - Turn on strict ANSI C as MSVC project default (common.props property sheet) - This required putting in a #pragma to to turn off MSVC warning 4001 which complains about "nonstandard extension 'single line comment'" - Override strict ANSI C back to MS extensions in platform.c because it #include's the message up Windows.h

--- a/vs/vs12/jsdebug/common.props
+++ b/vs/vs12/jsdebug/common.props
@@ -8,6 +8,7 @@
   <ItemDefinitionGroup>
     <ClCompile>
       <AdditionalIncludeDirectories>$(JavaDir)/include;$(JavaDir)/include/win32;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <DisableLanguageExtensions>true</DisableLanguageExtensions>
     </ClCompile>
     <Link>
       <AdditionalDependencies>$(JAVA_HOME_X86)/lib/jvm.lib;%(AdditionalDependencies)</AdditionalDependencies>
